// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button button--variant-flat button--color-success button--size-small"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> link story renders snapshot 1`] = `
<button
  class="button button--variant-link button--color-alert"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> linkInText story renders snapshot 1`] = `
<p
  class="typography--size-body typography--color-base"
>
  This text surrounds the 
  <button
    class="button button--variant-link button--color-alert"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> minimal story renders snapshot 1`] = `
<button
  class="button button--variant-minimal button--color-alert button--size-small"
  type="button"
>
  ​
  Minimal Button
</button>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button button--variant-outline button--color-brand button--size-small"
  type="button"
>
  ​
  Outline Button
</button>
`;
